@@ -17,6 +17,7 @@
     }
   },
   "mob": "minecraft:creeper",
+  "syringe": 1,
   "result": {
     "item": "rftoolsutility:glowing_module"
   }
