@@ -17,6 +17,7 @@
     }
   },
   "mob": "minecraft:piglin",
+  "syringe": 1,
   "result": {
     "item": "rftoolsutility:weakness_module"
   }
