@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed the blindness module recipe
+
 1.18-4.0.15:
 - Fixed missing recipe for the destination analyzer
 
